Added LSTM Word2Vec

--- a/model_experiements/LSTM_working.ipynb
+++ b/model_experiements/LSTM_working.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2885,6 +2885,240 @@
     "print(\"Detailed Metrics for Best Model:\")\n",
     "for metric in scoring.keys():\n",
     "    print(f\"{metric.capitalize()}: {grid_result.cv_results_['mean_test_' + metric][grid_result.best_index_]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LSTM + Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 12s 24ms/step - loss: 0.2245 - accuracy: 0.9183 - val_loss: 0.1571 - val_accuracy: 0.9486\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1301 - accuracy: 0.9585 - val_loss: 0.1334 - val_accuracy: 0.9565\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1014 - accuracy: 0.9692 - val_loss: 0.1098 - val_accuracy: 0.9621\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0829 - accuracy: 0.9767 - val_loss: 0.1110 - val_accuracy: 0.9646\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0664 - accuracy: 0.9825 - val_loss: 0.1227 - val_accuracy: 0.9645\n",
+      "Epoch 6/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0535 - accuracy: 0.9873 - val_loss: 0.1074 - val_accuracy: 0.9678\n",
+      "Epoch 7/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0453 - accuracy: 0.9899 - val_loss: 0.1055 - val_accuracy: 0.9680\n",
+      "Epoch 8/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0371 - accuracy: 0.9927 - val_loss: 0.1221 - val_accuracy: 0.9664\n",
+      "Epoch 9/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0346 - accuracy: 0.9932 - val_loss: 0.1115 - val_accuracy: 0.9698\n",
+      "Epoch 10/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0297 - accuracy: 0.9953 - val_loss: 0.1185 - val_accuracy: 0.9689\n",
+      "400/400 [==============================] - 2s 4ms/step\n",
+      "400/400 [==============================] - 2s 5ms/step\n",
+      "Fold Accuracy: 0.9679768243031631, Precision: 0.9604904632152589, Recall: 0.9695719443011862, F1 Score: 0.9650098383095218, ROC AUC: 0.9947081529422364\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 11s 24ms/step - loss: 0.2289 - accuracy: 0.9165 - val_loss: 0.1583 - val_accuracy: 0.9471\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 9s 24ms/step - loss: 0.1332 - accuracy: 0.9572 - val_loss: 0.1226 - val_accuracy: 0.9598\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1035 - accuracy: 0.9683 - val_loss: 0.1153 - val_accuracy: 0.9623\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 9s 24ms/step - loss: 0.0868 - accuracy: 0.9746 - val_loss: 0.1063 - val_accuracy: 0.9672\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 9s 24ms/step - loss: 0.0674 - accuracy: 0.9818 - val_loss: 0.1070 - val_accuracy: 0.9681\n",
+      "Epoch 6/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0589 - accuracy: 0.9857 - val_loss: 0.1157 - val_accuracy: 0.9655\n",
+      "Epoch 7/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0458 - accuracy: 0.9902 - val_loss: 0.1193 - val_accuracy: 0.9660\n",
+      "400/400 [==============================] - 2s 5ms/step\n",
+      "400/400 [==============================] - 2s 5ms/step\n",
+      "Fold Accuracy: 0.9671938615721891, Precision: 0.9645377861938371, Recall: 0.9633768913342503, F1 Score: 0.9639569892473119, ROC AUC: 0.9944579674717007\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 11s 24ms/step - loss: 0.2310 - accuracy: 0.9164 - val_loss: 0.1408 - val_accuracy: 0.9554\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1327 - accuracy: 0.9574 - val_loss: 0.1187 - val_accuracy: 0.9619\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1046 - accuracy: 0.9675 - val_loss: 0.1124 - val_accuracy: 0.9652\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0836 - accuracy: 0.9757 - val_loss: 0.1044 - val_accuracy: 0.9678\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0675 - accuracy: 0.9824 - val_loss: 0.1029 - val_accuracy: 0.9703\n",
+      "Epoch 6/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0543 - accuracy: 0.9865 - val_loss: 0.1034 - val_accuracy: 0.9708\n",
+      "Epoch 7/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0470 - accuracy: 0.9892 - val_loss: 0.1097 - val_accuracy: 0.9695\n",
+      "Epoch 8/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0394 - accuracy: 0.9922 - val_loss: 0.1069 - val_accuracy: 0.9702\n",
+      "400/400 [==============================] - 2s 4ms/step\n",
+      "400/400 [==============================] - 2s 4ms/step\n",
+      "Fold Accuracy: 0.9703257124960852, Precision: 0.9600609240142156, Recall: 0.9754126547455296, F1 Score: 0.9676759061833689, ROC AUC: 0.9951963481597433\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 11s 24ms/step - loss: 0.2264 - accuracy: 0.9176 - val_loss: 0.1409 - val_accuracy: 0.9541\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1295 - accuracy: 0.9589 - val_loss: 0.1284 - val_accuracy: 0.9600\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1017 - accuracy: 0.9697 - val_loss: 0.1077 - val_accuracy: 0.9654\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0796 - accuracy: 0.9773 - val_loss: 0.1017 - val_accuracy: 0.9676\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0659 - accuracy: 0.9824 - val_loss: 0.1193 - val_accuracy: 0.9663\n",
+      "Epoch 6/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0540 - accuracy: 0.9867 - val_loss: 0.1050 - val_accuracy: 0.9684\n",
+      "Epoch 7/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0447 - accuracy: 0.9900 - val_loss: 0.1172 - val_accuracy: 0.9683\n",
+      "400/400 [==============================] - 2s 4ms/step\n",
+      "400/400 [==============================] - 2s 4ms/step\n",
+      "Fold Accuracy: 0.9675853429376762, Precision: 0.9639299209893507, Recall: 0.9649243466299863, F1 Score: 0.9644268774703557, ROC AUC: 0.9945574827585936\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 11s 24ms/step - loss: 0.2296 - accuracy: 0.9160 - val_loss: 0.1424 - val_accuracy: 0.9526\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.1338 - accuracy: 0.9583 - val_loss: 0.1232 - val_accuracy: 0.9612\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 10s 26ms/step - loss: 0.1016 - accuracy: 0.9693 - val_loss: 0.1100 - val_accuracy: 0.9648\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 10s 25ms/step - loss: 0.0823 - accuracy: 0.9767 - val_loss: 0.1177 - val_accuracy: 0.9673\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 10s 25ms/step - loss: 0.0640 - accuracy: 0.9833 - val_loss: 0.1036 - val_accuracy: 0.9686\n",
+      "Epoch 6/10\n",
+      "400/400 [==============================] - 10s 24ms/step - loss: 0.0533 - accuracy: 0.9872 - val_loss: 0.1160 - val_accuracy: 0.9680\n",
+      "Epoch 7/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0441 - accuracy: 0.9905 - val_loss: 0.1318 - val_accuracy: 0.9623\n",
+      "Epoch 8/10\n",
+      "400/400 [==============================] - 9s 23ms/step - loss: 0.0385 - accuracy: 0.9921 - val_loss: 0.1130 - val_accuracy: 0.9699\n",
+      "400/400 [==============================] - 2s 5ms/step\n",
+      "400/400 [==============================] - 2s 5ms/step\n",
+      "Fold Accuracy: 0.9686031944879424, Precision: 0.9619518853437979, Recall: 0.96939477303989, F1 Score: 0.9656589877537038, ROC AUC: 0.9941967831003763\n",
+      "\n",
+      "Average Metrics Across Folds:\n",
+      "Accuracy: 0.9683\n",
+      "Precision: 0.9622\n",
+      "Recall: 0.9685\n",
+      "F1: 0.9653\n",
+      "Roc_auc: 0.9946\n",
+      "Final Average Metrics: {'accuracy': 0.9683369871594112, 'precision': 0.9621941959512921, 'recall': 0.9685361220101685, 'f1': 0.9653457197928524, 'roc_auc': 0.99462334688653}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.regularizers import l2\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "# Train and process Word2Vec embeddings\n",
+    "def train_word2vec_embeddings(sentences, word_index, embedding_dim=100):\n",
+    "    word2vec = Word2Vec(sentences=sentences, vector_size=embedding_dim, window=5, min_count=1)\n",
+    "    embedding_matrix = np.zeros((len(word_index) + 1, embedding_dim))\n",
+    "    for word, i in word_index.items():\n",
+    "        if word in word2vec.wv:\n",
+    "            embedding_matrix[i] = word2vec.wv[word]\n",
+    "    return embedding_matrix\n",
+    "\n",
+    "# Define LSTM model with Dropout and L2 regularization\n",
+    "def create_lstm_model(vocab_size, embedding_matrix, input_length, learning_rate=0.001, l2_lambda=0.01):\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(vocab_size, embedding_matrix.shape[1],\n",
+    "                        weights=[embedding_matrix],\n",
+    "                        input_length=input_length,\n",
+    "                        trainable=True))\n",
+    "    model.add(LSTM(units=64, return_sequences=False, dropout=0.2))\n",
+    "    model.add(Dropout(0.2))  # Added Dropout layer here\n",
+    "    model.add(Dense(1, activation='sigmoid', kernel_regularizer=l2(l2_lambda)))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=Adam(learning_rate), metrics=['accuracy'])\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "# Early stopping callback\n",
+    "early_stopping = EarlyStopping(\n",
+    "    monitor='val_loss',\n",
+    "    patience=3,\n",
+    "    restore_best_weights=True\n",
+    ")\n",
+    "\n",
+    "# Stratified K-Fold Cross-Validation with additional metrics\n",
+    "def stratified_k_fold_cross_validation(X, y, embedding_matrix, vocab_size, max_len, n_splits=5, batch_size=128):\n",
+    "    skf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "    metrics = {'accuracy': [], 'precision': [], 'recall': [], 'f1': [], 'roc_auc': []}\n",
+    "\n",
+    "    for train_idx, val_idx in skf.split(X, y):\n",
+    "        X_train, X_val = X[train_idx], X[val_idx]\n",
+    "        y_train, y_val = y[train_idx], y[val_idx]\n",
+    "\n",
+    "        model = create_lstm_model(vocab_size, embedding_matrix, max_len, learning_rate=0.001, l2_lambda=0.01)\n",
+    "        \n",
+    "        # Fit model with early stopping\n",
+    "        model.fit(\n",
+    "            X_train, y_train,\n",
+    "            validation_data=(X_val, y_val),\n",
+    "            epochs=10,\n",
+    "            batch_size=batch_size,\n",
+    "            verbose=1,\n",
+    "            callbacks=[early_stopping]\n",
+    "        )\n",
+    "        \n",
+    "        y_pred = (model.predict(X_val) > 0.5).astype(\"int32\")\n",
+    "        y_pred_prob = model.predict(X_val).ravel()\n",
+    "\n",
+    "        accuracy = accuracy_score(y_val, y_pred)\n",
+    "        precision = precision_score(y_val, y_pred)\n",
+    "        recall = recall_score(y_val, y_pred)\n",
+    "        f1 = f1_score(y_val, y_pred)\n",
+    "        roc_auc = roc_auc_score(y_val, y_pred_prob)\n",
+    "\n",
+    "        metrics['accuracy'].append(accuracy)\n",
+    "        metrics['precision'].append(precision)\n",
+    "        metrics['recall'].append(recall)\n",
+    "        metrics['f1'].append(f1)\n",
+    "        metrics['roc_auc'].append(roc_auc)\n",
+    "\n",
+    "        print(f\"Fold Accuracy: {accuracy}, Precision: {precision}, Recall: {recall}, F1 Score: {f1}, ROC AUC: {roc_auc}\")\n",
+    "\n",
+    "    avg_metrics = {metric: np.mean(scores) for metric, scores in metrics.items()}\n",
+    "    print(\"\\nAverage Metrics Across Folds:\")\n",
+    "    for metric, avg_score in avg_metrics.items():\n",
+    "        print(f\"{metric.capitalize()}: {avg_score:.4f}\")\n",
+    "    \n",
+    "    return avg_metrics\n",
+    "\n",
+    "# Example usage\n",
+    "# Load your data and tokenize it\n",
+    "texts = data[\"processed_full_content\"]\n",
+    "labels = data[\"label\"].values\n",
+    "\n",
+    "# Tokenize and prepare sequences\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(texts)\n",
+    "X = tokenizer.texts_to_sequences(texts)\n",
+    "max_len = 100\n",
+    "X = pad_sequences(X, maxlen=max_len)\n",
+    "\n",
+    "# Train Word2Vec on tokenized sequences\n",
+    "sentences = [text.split() for text in texts]  # Convert texts into tokenized sentences\n",
+    "embedding_dim = 100\n",
+    "embedding_matrix = train_word2vec_embeddings(sentences, tokenizer.word_index, embedding_dim)\n",
+    "\n",
+    "# Perform Stratified K-Fold cross-validation\n",
+    "vocab_size = len(tokenizer.word_index) + 1\n",
+    "avg_metrics = stratified_k_fold_cross_validation(X, labels, embedding_matrix, vocab_size, max_len)\n",
+    "print(\"Final Average Metrics:\", avg_metrics)\n"
    ]
   },
   {
