nn added k-fold and embedding

--- a/model_experiements/neural_network_cv.ipynb
+++ b/model_experiements/neural_network_cv.ipynb
@@ -346,10 +346,10 @@
     "    if hasattr(layer, 'kernel_regularizer') and layer.kernel_regularizer is not None:\n",
     "        print(f\"Layer {layer.name} regularizer: {layer.kernel_regularizer.__class__.__name__}\")\n",
     "print(\"-\" * 50)\n",
-    "print(f\"Accuracy: {avg_accuracy:.5f}\")\n",
-    "print(f\"Precision: {avg_precision:.5f}\")\n",
-    "print(f\"Recall: {avg_recall:.5f}\")\n",
-    "print(f\"F1 Score: {avg_f1:.5f}\")\n",
+    "print(f\"Average Accuracy: {avg_accuracy:.5f}\")\n",
+    "print(f\"Average Precision: {avg_precision:.5f}\")\n",
+    "print(f\"Average Recall: {avg_recall:.5f}\")\n",
+    "print(f\"Average F1 Score: {avg_f1:.5f}\")\n",
     "\n",
     "\n",
     "plot_model(model, show_shapes=True, show_layer_names=True)"
