--- a/model_experiements/neural_network_cv.ipynb
+++ b/model_experiements/neural_network_cv.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "data = pd.read_csv('../processed_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.7522 - accuracy: 0.8794 - val_loss: 0.5317 - val_accuracy: 0.9420\n",
+      "Epoch 2/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5422 - accuracy: 0.9501 - val_loss: 0.5836 - val_accuracy: 0.9523\n",
+      "Epoch 3/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5203 - accuracy: 0.9596 - val_loss: 0.5544 - val_accuracy: 0.9460\n",
+      "Epoch 4/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5131 - accuracy: 0.9624 - val_loss: 0.5895 - val_accuracy: 0.9372\n",
+      "Epoch 5/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5280 - accuracy: 0.9661 - val_loss: 0.5846 - val_accuracy: 0.9485\n",
+      "Epoch 6/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5072 - accuracy: 0.9716 - val_loss: 0.5962 - val_accuracy: 0.9462\n",
+      "Epoch 7/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5020 - accuracy: 0.9732 - val_loss: 0.6830 - val_accuracy: 0.9420\n",
+      "Epoch 8/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5055 - accuracy: 0.9761 - val_loss: 0.5593 - val_accuracy: 0.9543\n",
+      "Epoch 9/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5190 - accuracy: 0.9775 - val_loss: 0.6175 - val_accuracy: 0.9510\n",
+      "Epoch 10/10\n",
+      "639/639 [==============================] - 5s 8ms/step - loss: 0.5008 - accuracy: 0.9793 - val_loss: 0.6295 - val_accuracy: 0.9495\n",
+      "400/400 [==============================] - 0s 980us/step\n",
+      "Performance Metrics:\n",
+      "Accuracy: 0.9486\n",
+      "Precision: 0.9378\n",
+      "Recall: 0.9492\n",
+      "F1 Score: 0.9435\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, Dense, Dropout, Flatten\n",
+    "from tensorflow.keras.regularizers import l2\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "# Set random seeds for reproducibility\n",
+    "seed = 42\n",
+    "tf.random.set_seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "random.seed(seed)\n",
+    "\n",
+    "# Parameters\n",
+    "max_features = 5000       # Limit vocabulary to 5000 words\n",
+    "max_sequence_length = 300 # Max number of words in each sequence\n",
+    "embedding_dim = 128       # Embedding layer output dimension\n",
+    "l2_lambda = 0.01\n",
+    "\n",
+    "# Step 1: Text Vectorization using CountVectorizer (build vocabulary)\n",
+    "vectorizer = CountVectorizer(max_features=max_features)\n",
+    "X_counts = vectorizer.fit_transform(data['processed_full_content'])\n",
+    "\n",
+    "# Map words to indices for the embedding layer\n",
+    "word_index = vectorizer.vocabulary_\n",
+    "\n",
+    "# Convert word counts to sequences of word indices\n",
+    "X_sequences = []\n",
+    "for document in X_counts.toarray():\n",
+    "    sequence = [i for i, count in enumerate(document) if count > 0]\n",
+    "    X_sequences.append(sequence)\n",
+    "\n",
+    "# Pad sequences to ensure they have the same length\n",
+    "X_padded = pad_sequences(X_sequences, maxlen=max_sequence_length, padding='post')\n",
+    "\n",
+    "# Labels\n",
+    "y = data['label'].values\n",
+    "\n",
+    "# Split data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_padded, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 2: Define the Neural Network Model with Embedding Layer\n",
+    "vocab_size = len(word_index) + 1  # Adding 1 for zero-padding\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(input_dim=vocab_size, output_dim=embedding_dim, input_length=max_sequence_length))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(128, activation='relu', kernel_regularizer=l2(l2_lambda)))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(64, activation='relu', kernel_regularizer=l2(l2_lambda)))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1, activation='sigmoid'))  # Output layer for binary classification\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Step 3: Train the Model\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=64, validation_split=0.2, verbose=1)\n",
+    "\n",
+    "# Step 4: Evaluate the Model\n",
+    "y_pred_prob = model.predict(X_test)\n",
+    "y_pred = (y_pred_prob > 0.5).astype(int).flatten()\n",
+    "\n",
+    "# Calculate and print metrics\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred, zero_division=0)\n",
+    "recall = recall_score(y_test, y_pred, zero_division=0)\n",
+    "f1 = f1_score(y_test, y_pred, zero_division=0)\n",
+    "\n",
+    "print('Performance Metrics:')\n",
+    "print(f'Accuracy: {accuracy:.4f}')\n",
+    "print(f'Precision: {precision:.4f}')\n",
+    "print(f'Recall: {recall:.4f}')\n",
+    "print(f'F1 Score: {f1:.4f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +314,7 @@
     "random.seed(seed)\n",
     "\n",
     "# Load data\n",
-    "data = pd.read_csv('processed_data.csv')\n",
+    "data = pd.read_csv('../processed_data.csv')\n",
     "\n",
     "# Preprocess text data\n",
     "use = data['processed_full_content'].apply(lambda x: x.lower())\n",
@@ -229,7 +358,7 @@
     "\n",
     "    # Fit the model on the training data\n",
     "    history = model.fit(X_train, y_train,\n",
-    "                        epochs=20,\n",
+    "                        epochs=10,\n",
     "                        batch_size=64,\n",
     "                        validation_data=(X_test, y_test),\n",
     "                        callbacks=[early_stopping],\n",
@@ -917,7 +1046,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -931,7 +1060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
