--- a/processing_experiments/booster_words.ipynb
+++ b/processing_experiments/booster_words.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "!pip3 install -r ../requirements.txt"
+    "# !pip3 install -r ../requirements.txt"
    ]
   },
   {
@@ -1302,9 +1302,7 @@
     "\n",
     "8. Applying the combined function on `full_review` column.\n",
     "\n",
-    "9. Display the resulting `data` DataFrame.\n",
-    "\n",
-    "### <span style=\"color:red\">The code below will take approximately 15 minutes to run!</span>"
+    "9. Display the resulting `data` DataFrame."
    ]
   },
   {
@@ -1873,16 +1871,9 @@
     "-   Define a list of `allowed_words` that should not be removed.\n",
     "-   Remove the stopwords (excluding those that should not be removed).\n",
     "\n",
-    "5. Perform part-of-speech tagging\n",
-    "-   Define selected `pos_categories`\n",
-    "-   Calculate POS tag ratios for selected categories\n",
-    "-   Calculate ratio of each selected POS category (`pronoun_ratio`, `modal_verb_ratio`, `adjective_ratio`)\n",
+    "5. Apply stemming to each token.\n",
     "\n",
-    "6. Apply lemmatization to each token in the list (`lemmatized_words`) using the `lemmatize` method.\n",
-    "\n",
-    "7. Join the lemmatized tokens into a single processed text using the `join` method and return the processed text.\n",
-    "\n",
-    "Create 4 new columns (`processed_full_review`, `pronoun_ratio`, `modal_verb_ratio`, `adjective_ratio`) in `data` by applying the `process_full_review` function to the `full_review` column."
+    "6. Join the stemmed tokens into a single processed text using the `join` method and return the processed text."
    ]
   },
   {
@@ -2301,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2321,7 +2312,6 @@
     "    allowed_words = [\"no\", \"not\", \"don't\", \"dont\", \"don\", \"but\", \n",
     "                     \"however\", \"never\", \"wasn't\", \"wasnt\", \"shouldn't\",\n",
     "                     \"shouldnt\", \"mustn't\", \"musnt\"]\n",
-    "\n",
     "    \n",
     "    booster_words = [\"absolutely\", \"amazingly\", \"awfully\", \"completely\", \"considerably\", \n",
     "                 \"definitely\", \"entirely\", \"exceedingly\", \"extremely\", \"highly\", \n",
@@ -2330,17 +2320,7 @@
     "    \n",
     "    stemmed = [stemmer.stem(word) for word in tokens if word not in stop_words or word in allowed_words or word in booster_words]\n",
     "\n",
-    "    \n",
-    "\n",
-    "    \n",
     "    return ' '.join(stemmed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <span style=\"color:red\">The code below will take approximately 16 minutes to run!</span>"
    ]
   },
   {
@@ -2501,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2528,8 +2508,6 @@
     }
    ],
    "source": [
-    "\n",
-    "!pip install scikit-learn\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -2597,38 +2575,6 @@
     "rf_predictions = rf_model.predict(X_test)\n",
     "print(\"Random Forest Accuracy:\", accuracy_score(y_test, rf_predictions))\n",
     "print(\"Random Forest Classification Report:\\n\", classification_report(y_test, rf_predictions,digits=4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9504384591293454\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0     0.9624    0.9466    0.9544      7004\n",
-      "           1     0.9364    0.9551    0.9457      5768\n",
-      "\n",
-      "    accuracy                         0.9504     12772\n",
-      "   macro avg     0.9494    0.9508    0.9501     12772\n",
-      "weighted avg     0.9507    0.9504    0.9505     12772\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "clf = LogisticRegression(random_state=0,max_iter=500).fit(X_train, y_train)\n",
-    "clf_predictions = clf.predict(X_test)\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, clf_predictions))\n",
-    "print(\"Classification Report:\\n\", classification_report(y_test, clf_predictions,digits=4))"
    ]
   }
  ],
