--- a/processing_experiments/count_vectoriser.ipynb
+++ b/processing_experiments/count_vectoriser.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "!pip3 install -r requirements.txt"
+    "# !pip3 install -r requirements.txt"
    ]
   },
   {
@@ -1913,16 +1913,9 @@
     "-   Define a list of `allowed_words` that should not be removed.\n",
     "-   Remove the stopwords (excluding those that should not be removed).\n",
     "\n",
-    "5. Perform part-of-speech tagging\n",
-    "-   Define selected `pos_categories`\n",
-    "-   Calculate POS tag ratios for selected categories\n",
-    "-   Calculate ratio of each selected POS category (`pronoun_ratio`, `modal_verb_ratio`, `adjective_ratio`)\n",
+    "5. Apply stemming to each token.\n",
     "\n",
-    "6. Apply lemmatization to each token in the list (`lemmatized_words`) using the `lemmatize` method.\n",
-    "\n",
-    "7. Join the lemmatized tokens into a single processed text using the `join` method and return the processed text.\n",
-    "\n",
-    "Create 4 new columns (`processed_full_review`, `pronoun_ratio`, `modal_verb_ratio`, `adjective_ratio`) in `data` by applying the `process_full_review` function to the `full_review` column."
+    "6. Join the stemmed tokens into a single processed text using the `join` method and return the processed text."
    ]
   },
   {
@@ -2618,59 +2611,6 @@
     "print(\"Random Forest Accuracy:\", accuracy_score(y_test, rf_predictions))\n",
     "print(\"Random Forest Classification Report:\\n\", classification_report(y_test, rf_predictions))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9609301597243971\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.97      0.96      0.96      7004\n",
-      "           1       0.95      0.96      0.96      5768\n",
-      "\n",
-      "    accuracy                           0.96     12772\n",
-      "   macro avg       0.96      0.96      0.96     12772\n",
-      "weighted avg       0.96      0.96      0.96     12772\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\65840\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "clf = LogisticRegression(random_state=0).fit(X_train, y_train)\n",
-    "clf_predictions = clf.predict(X_test)\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, clf_predictions))\n",
-    "print(\"Classification Report:\\n\", classification_report(y_test, clf_predictions))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
