--- a/web scraping/scraped_data_preprocessing_final.ipynb
+++ b/web scraping/scraped_data_preprocessing_final.ipynb
@@ -1674,7 +1674,7 @@
     "-   Define a list of `allowed_words` that should not be removed.\n",
     "-   Remove the stopwords (excluding those that should not be removed).\n",
     "\n",
-    "5. Apply stemming to each token in the list (`lemmatized_words`) using the `lemmatize` method.\n",
+    "5. Apply stemming to each token.\n",
     "\n",
     "6. Join the stemmed tokens into a single processed text using the `join` method and return the processed text.\n",
     "\n",
