--- a/processing_experiments/stemming.ipynb
+++ b/processing_experiments/stemming.ipynb
@@ -1801,16 +1801,9 @@
     "-   Define a list of `allowed_words` that should not be removed.\n",
     "-   Remove the stopwords (excluding those that should not be removed).\n",
     "\n",
-    "5. Perform part-of-speech tagging\n",
-    "-   Define selected `pos_categories`\n",
-    "-   Calculate POS tag ratios for selected categories\n",
-    "-   Calculate ratio of each selected POS category (`pronoun_ratio`, `modal_verb_ratio`, `adjective_ratio`)\n",
+    "5. Apply stemming to each token.\n",
     "\n",
-    "6. Apply lemmatization to each token in the list (`lemmatized_words`) using the `lemmatize` method.\n",
-    "\n",
-    "7. Join the lemmatized tokens into a single processed text using the `join` method and return the processed text.\n",
-    "\n",
-    "Create 4 new columns (`processed_full_review`, `pronoun_ratio`, `modal_verb_ratio`, `adjective_ratio`) in `data` by applying the `process_full_review` function to the `full_review` column."
+    "6. Join the stemmed tokens into a single processed text using the `join` method and return the processed text."
    ]
   },
   {
@@ -2255,13 +2248,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <span style=\"color:red\">The code below will take approximately 16 minutes to run!</span>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -2419,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2432,6 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "# Use CountVectorizer instead of TfidfVectorizer\n",
     "count_vectorizer = CountVectorizer(max_features=1000)\n",
     "count_matrix = count_vectorizer.fit_transform(data['processed_full_content'])\n",
     "\n",
