Final update for markdowns

--- a/model_experiements/CNN.ipynb
+++ b/model_experiements/CNN.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip3 install -r ../requirements.txt"
+    "# !pip3 install -r ../requirements.txt"
    ]
   },
   {
