--- a/processing_experiments/stemming.ipynb
+++ b/processing_experiments/stemming.ipynb
@@ -2407,6 +2407,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('processed_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
