--- a/processing_experiments/stemming.ipynb
+++ b/processing_experiments/stemming.ipynb
@@ -2404,12 +2404,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we create a new `csv` file called `processed_data.csv` where we store the new processed dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('processed_data.csv', index=False)"
+    "# data.to_csv('processed_data.csv', index=False)"
    ]
   },
   {
